--- a/style.css
+++ b/style.css
@@ -44,6 +44,55 @@ body{
     font-size : 2rem;
 }
 
+.stat-container{
+    padding : 15px 20px;
+    border-radius : 10px;
+    border : 2px solid rgba(255,255,255,0.18);
+    display : flex;
+    align-items : center;
+    justify-content : space-between;
+    gap : 20px;
+    width : 100%;
+}
+
+.details{
+    width : 100%;
+}
+
+.details h3{
+   color : #fff; 
+}
+
+#progressbar{
+    width : 100%;
+    height : 7px;
+    background : rgba(225, 194, 289, 0.3);
+    border-radius : 20px;
+    position : relative;
+    margin-top : 15px;
+}
+
+#progress{
+    width : 0;
+    height : 100%;
+    background : #ff6191;
+    border-radius : 20px;
+    transition : width 0.3s ease;
+}
+
+#numbers{
+    display : flex;
+    align-items : center;
+    justify-content : center;
+    width : 80px;
+    height : 80%;
+    background: #ff6f91;
+    border : 2px soid rgba(255, 194, 209, 0.3);
+    font-weight : bold;
+    border-radius : 50%;
+    font-size : 1.5rem;
+}
+
 .input-area{
     display : flex;
     justify-content : space-between;
@@ -145,6 +194,11 @@ body{
     word-wrap : break-word;
 }
 
+#task-list li.completed span{
+    text-decoration : 2px line-through #000;
+    color : #000;
+}
+
 .task-buttons{
     display : flex;
     gap : 10px;
@@ -176,4 +230,31 @@ body{
 
 .task-buttons .delete-btn{
     background : #ff6f91;
+}
+
+/* media Queries */
+@media(max-width : 600px){
+    .container{
+        margin : 0 20px;
+        padding : 0 10px;
+    }
+
+    .todo-app{
+        padding : 1.5rem;
+        gap : 20px;
+    }
+
+    #numbers{
+        width : 60px;
+        height : 60px;
+        font-size : 1rem;
+    }
+
+    .input-area input{
+        font-size : 1rem;
+    }
+
+    #task-list li{
+        font-size : 1rem;
+    }
 }
