--- a/style.css
+++ b/style.css
@@ -85,9 +85,9 @@ body{
     align-items : center;
     justify-content : center;
     width : 80px;
-    height : 80%;
+    height : 80px;
     background: #ff6f91;
-    border : 2px soid rgba(255, 194, 209, 0.3);
+    border : 2px solid rgba(255, 194, 209, 0.3);
     font-weight : bold;
     border-radius : 50%;
     font-size : 1.5rem;
@@ -172,6 +172,7 @@ body{
     appearance : none;
     cursor : pointer;
     transition : all 0.2s ease;
+    position: relative;
 }
 
 #task-list li .checkbox:checked{
@@ -179,13 +180,22 @@ body{
     transform : scale(1.1);
 }
 
-#task-list li .checkbox:checked::before{
-   content : '\2713';
-   color : #fff;
-   display : flex;
-   justify-content: center;
-   align-items : center;
-   font-size : 1rem;
+#task-list li .checkbox:checked::before {
+  content: '\2713';
+  color: #fff;
+  font-size: 1rem;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #task-list li span{
