--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     justify-content : center;
     align-items : center;
     min-height : 100vh;
-    background : url(/images/background.jpg) no-repeat center center/cover;
+    background : url(./images/background.jpg) no-repeat center center/cover;
     font-family: "Jost", sans-serif;
 }
 
